--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <source src="bg.mp4" type="video/mp4" />
       </video>
       <div class="content">
-        <h1>لهف </h1>
+        <h1>Fullscreen video Banner</h1>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam ipsa
           rerum nihil, sequi cum ullam dicta similique! Expedita nisi non sequi
